# Copyright : ETH Zurich
# License   : three-clause BSD license
# Authors   : Witold Wolski
# for full text refer to files: LICENSE, AUTHORS and COPYRIGHT


ADD_SUBDIRECTORY(basetest)
ADD_SUBDIRECTORY(filtertest)
ADD_SUBDIRECTORY(resampletest)
ADD_SUBDIRECTORY(statstest)
ADD_SUBDIRECTORY(mstest)
ADD_SUBDIRECTORY(chemistrytest)
ADD_SUBDIRECTORY(utilstest)

